--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>☔tirth personal site</title>
   <!-- we can use this type of emoji due to UTF-8 -->
-  <link rel="stylesheet" href="https://tirth7677/personal/blob/main/style.css">
+  <link rel="stylesheet" type = "text/css" href="https://tirth7677/personal/blob/main/style.css">
 </head>
 <body>
   <!-- <h1>☔☔☔☔☔☔☔☔☔☔☔☔</h1> 
