--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>☔tirth personal site</title>
-  <!-- we can use this type of emoji due to UTF-8 -->
-  <link rel="stylesheet" type = "text/css" href="/style.css">
+  <!-- we can use these type of emoji due to UTF-8 -->
+  <link rel="stylesheet" type ="text/css" href="/style.css">
 </head>
 <body>
   <!-- <h1>☔☔☔☔☔☔☔☔☔☔☔☔</h1> 
